backend/infrastructure/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sbay
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 4000
