backend/infrastructure/kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: sbay

spec:
  ingressClassName: nginx

  rules:
    - host: sbay.wdchocopie.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
